--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
+  "type": "module",
+
   "name": "vehicle-rental-system",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
     "dev": "tsx watch src/server.ts",
+    "build":"tsc",
+    "start": "node dist/server.js",
     "script": "tsx watch src/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
