--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "tsx watch src/server.ts",
+    "dev": "ts-node src/server.ts",
     "build":"tsc",
     "start": "node dist/server.js",
     "script": "tsx watch src/server.ts",
