--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "version": 2,
   "builds": [
-    { "src": "dist/server.js", "use": "@vercel/node" }
+    { "src": "dist/app.ts", "use": "@vercel/node" }
   ],
   "routes": [
     { "src": "/(.*)", "dest": "src/app.ts" }
