--- a/package.json
+++ b/package.json
@@ -1,32 +1,30 @@
 {
-  "type": "module",
   "name": "vehicle-rental-system",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/app.js",
   "scripts": {
-    "dev": "tsx watch src/server.ts",
+    "dev": "tsx watch app.ts",
     "build": "tsc",
-    "start": "node dist/server.js",
-    "script": "tsx watch src/server.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node dist/app.js",
+    "vercel-build": "npm run build"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
-    "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.3",
     "dotenv": "^17.2.3",
     "express": "^4.22.1",
     "jsonwebtoken": "^9.0.3",
-    "pg": "^8.17.1",
-    "typescript": "^5.9.3"
+    "pg": "^8.17.1"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^5.0.6",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^25.0.9",
-    "@types/pg": "^8.16.0"
+    "@types/pg": "^8.16.0",
+    "tsx": "^4.7.0",
+    "typescript": "^5.9.3"
+  },
+  "engines": {
+    "node": "20.x"
   }
 }
