--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,21 @@
 {
   "version": 2,
   "builds": [
-    { "src": "src/app.ts", "use": "@vercel/node" }
+    {
+      "src": "app.ts",
+      "use": "@vercel/node",
+      "config": {
+        "includeFiles": ["**/*.ts"]
+      }
+    }
   ],
   "routes": [
-    { "src": "/(.*)", "dest": "src/app.ts" }
-  ]
+    {
+      "src": "/(.*)",
+      "dest": "app.ts"
+    }
+  ],
+  "env": {
+    "NODE_ENV": "production"
+  }
 }
