--- a/vercel.json
+++ b/vercel.json
@@ -2,20 +2,14 @@
   "version": 2,
   "builds": [
     {
-      "src": "app.ts",
-      "use": "@vercel/node",
-      "config": {
-        "includeFiles": ["**/*.ts"]
-      }
+      "src": "api/index.ts",
+      "use": "@vercel/node"
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "app.ts"
+      "dest": "/api/index.ts"
     }
-  ],
-  "env": {
-    "NODE_ENV": "production"
-  }
+  ]
 }
