--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,35 +1,45 @@
 {
+  // Visit https://aka.ms/tsconfig to read more about this file
   "compilerOptions": {
-    // File Structure
-    "rootDir": ".vercel",
-    "outDir": "./dist",
-    
-    // MODULE SYSTEM - CommonJS for maximum Vercel compatibility
-    "module": "commonjs",
-    "moduleResolution": "node",
-    "target": "ES2020",
-    
-    // Interoperability
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
-    "resolveJsonModule": true,
-    
-    // Type Checking
+    // File Layout
+     "rootDir": "./src",
+     "outDir": "./dist",
+
+    // Environment Settings
+    // See also https://aka.ms/tsconfig/module
+    "module": "esnext",
+    "target": "esnext",
+    "moduleResolution": "bundler",
     "types": ["node"],
-    "strict": true,
+    // For nodejs:
+    // "lib": ["esnext"],
+    // "types": ["node"],
+    // and npm install -D @types/node
+
+    // Other Outputs
+    //"sourceMap": true,
+    //"declaration": true,
+    //"declarationMap": true,
+
+    // Stricter Typechecking Options
     "noUncheckedIndexedAccess": true,
     "exactOptionalPropertyTypes": true,
-    
-    // Build Settings
-    "sourceMap": false,
-    "declaration": false,
-    "removeComments": true,
-    
-    // Other
+
+    // Style Options
+    // "noImplicitReturns": true,
+    // "noImplicitOverride": true,
+    // "noUnusedLocals": true,
+    // "noUnusedParameters": true,
+    // "noFallthroughCasesInSwitch": true,
+    // "noPropertyAccessFromIndexSignature": true,
+
+    // Recommended Options
+    "strict": true,
+    //"jsx": "react-jsx",
+    "verbatimModuleSyntax": false,
+    "isolatedModules": true,
+    "noUncheckedSideEffectImports": true,
+    "moduleDetection": "force",
     "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
-    "isolatedModules": true
-  },
-  "include": ["**/*.ts"],
-  "exclude": ["node_modules", "dist", "**/*.spec.ts"]
+  }
 }
